# EmbeddedProjects

./: .gitignore
ESP32-Projects/: README.md
ESP32-Projects/01-WiFi-MQTT-SensorHub/: README.md
ESP32-Projects/02-BLE-OTA-Update/: README.md
ESP32-Projects/03-FreeRTOS-MultiSensor-Dashboard/: README.md
ESP32-Projects/04-ESP-NOW-Mesh-Network/: README.md
ESP32-Projects/05-WebSocket-RealTime-Control/: README.md
ESP32-Projects/06-DeepSleep-PowerManager/: README.md
ESP32-Projects/07-Qt-Motor-PWM-Dashboard/: circulargauge.cpp  circulargauge.h  main.cpp  mainwindow.cpp
ESP32-Projects/SinusWave/: SinusWave.ino
ESP32-Projects/esp32BluetoothRX/: esp32BluetoothRX.ino
Satellite-Projects/Ground-Station-Telemetry/: .gitignore  APPROACHES.md  DESIGN.md  Makefile  README.md  implementation_plan.md
SinusWave/: SinusWave.ino
Stm32F407VG-Projects/: README.md
Stm32F407VG-Projects/01-UART-DMA-RingBuffer/: README.md
Stm32F407VG-Projects/02-PID-Motor-Control/: README.md
Stm32F407VG-Projects/03-I2C-MPU6050-KalmanFilter/: README.md
Stm32F407VG-Projects/04-FreeRTOS-TaskScheduler/: README.md
Stm32F407VG-Projects/05-CAN-Bus-Network/: README.md
Stm32F407VG-Projects/06-ADC-DMA-FFT/: README.md
Stm32F407VG-Projects/07-Qt-Motor-PWM-Dashboard/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Stm32F407VG-Projects/07-Qt-Motor-PWM-Dashboard/STM32_Firmware/Core/Src/: main.c
esp32BluetoothRX/: esp32BluetoothRX.ino
pic16f877a/: PROJECTS.md
pic16f877a/Projeler/: 7segment_Disp.txt  frekans_ölcer.txt  kare_ucgen_sinus_dalga.txt  kilit_Sistem.txt  pwm_sinyal_üret.txt  (+1 more)
(+103 files in other folders)
